--- a/application.yml
+++ b/application.yml
@@ -1,1 +1,7 @@
-
+eureka:
+  client:
+    fetch-registry: false
+    register-with-eureka: false
+    service-url: 
+      defaultZone: http://localhost:7761/eureka
+      
