--- a/application.yml
+++ b/application.yml
@@ -1,7 +1,21 @@
 eureka:
   client:
-    fetch-registry: false
-    register-with-eureka: false
-    service-url: 
-      defaultZone: http://localhost:7761/eureka
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka  
       
+  instance:
+    hostname: localhost
+    prefer-ip-address: true
+management:
+  endpoint:
+    health:
+      show-details: always
+    shutdown:
+      enabled: true  
+  endpoints:
+    web:
+      exposure:
+        include:
+        - "*"
